# diabetes-app

./: .gitignore  data_analysis.ipynb  pyproject.toml
diabetes_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jupyter/: data_analysis.ipynb
ml/: evaluate.py  predict.py  preprocess.py  train.py  utils.py
models/: modele_diabete_final_rf.pkl
notebooks/: data_analysis.ipynb
tests/: test_predict.py  test_preprocess.py  test_train.py  test_utils.py
