[project]
name = "diabetes-app"
version = "0.1.0"
description = "Projet d'analyse et de modélisation du diabète."
readme = "README.md"
authors = [{ name = "mioty" }]
license = { text = "MIT" }
requires-python = ">=3.10, <3.12"

dependencies = [
    "pandas",
    "scikit-learn",
    "statsmodels",
    "lightgbm",
    "pycaret",
    "plotly",
    "plotly-resampler",
    "seaborn",
    "streamlit",
    "fastjsonschema",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-timeout",
    "jupyter",
    "debugpy",
    "pipx",
    "GitPython",
    "ruff",
    "mypy",
]

# --------------------------------
# Ruff configurations
# --------------------------------
[tool.ruff]
line-length = 100


[tool.ruff.lint]
select = ["E", "F", "W", "I"]

# --------------------------------
# Mypy configurations
# --------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
